--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body, ul {
     margin-left: px;
     padding: 0;
     background-color: pink;
+    overflow-x: hidden;
     
 }
 
@@ -85,8 +86,8 @@ h3
 {
     color:rgb(202, 60, 84);
     font-size:80px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight:600;
+    font-family: "Black Han Sans", sans-serif;
+    font-weight: 200;
     
 }
 #headline{
@@ -166,7 +167,7 @@ h3
 @import url('https://fonts.googleapis.com/css?family = Poppins:200,300,400,500,600,700,800,900&display=swap');
 footer
 {
-    margin-top:1000px;
+    margin-top:100px;
     position:relative;
     width:100%;
     background: #3586ff;
@@ -270,6 +271,7 @@ footer .wave#wave4
     opacity:0.7;
     bottom:20px;
     animation: animateWave_02 4s linear infinite;
+    background-color: #86bef2;
 }
 @keyframes animateWave
 {
@@ -401,7 +403,7 @@ footer .wave#wave4
     font-size: 27px;
     text-align: center;
     border-radius: 30px;
-    margin-left: 300px;
+    margin-left: 400px;
 
 }
 #user{
@@ -414,3 +416,189 @@ footer .wave#wave4
 #what{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+/* 3 */
+#Time
+{
+    margin:0px;
+    padding:0px;
+    overflow-y: scroll;
+    background-color: #ffafcc;
+}
+.timeline {
+    position: relative;
+    width: 100%;
+    max-width: 3500px;
+    margin: 60px auto 20px auto ;
+    height: 900px;
+    
+
+}
+
+.timeline::before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    top: 0;
+    bottom: 0;
+    width: 4px;
+    background: #ddd;
+    transform: translateX(-50%);
+}
+
+.timeline-event {
+    display: flex;
+    align-items: center;
+    margin: 150px 0; 
+    position: relative;
+    width: 100%;
+    opacity: 0; 
+    transform: translateY(20px);
+    animation: fadeInUp 0.5s forwards; 
+}
+
+.timeline-event:nth-child(1),
+.timeline-event:nth-child(2),
+.timeline-event:nth-child(3),
+.timeline-event:nth-child(4),
+.timeline-event:nth-child(5),
+.timeline-event:nth-child(6) {
+    animation: none; /* Remove existing animations */
+}
+.fadeInUp {
+    animation: fadeInUp 0.5s forwards;
+}
+
+.fadeOutDown {
+    animation: fadeOutDown 0.5s forwards;
+}
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.timeline-event .timeline-date {
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #873f3f;
+    background: #fff;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.timeline-event .timeline-content {
+    background: #f9f9f9;
+    padding: 20px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 0;
+}
+
+.timeline-event.left .timeline-content {
+    left: calc(48% - 300px); 
+}
+
+.timeline-event.right .timeline-content {
+    left: calc(50% + 100px); 
+}
+
+.timeline-content h3 {
+    margin: 0;
+    font-size: 32px;
+    color: #fcb900;
+}
+
+.timeline-content h4 {
+    margin: 10px 0;
+    font-size: 24px;
+}
+/* 4 */
+.gallery
+{
+    background-color: #CDB4DB;
+}
+.imagegallery img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    justify-content: space-between;
+    margin-left: 30px;
+    
+
+
+}
+.imagegallery{
+    height: 400px;
+    margin-top: 180px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 200px;
+}
+.imagegallery2 img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    justify-content: space-between;
+    margin-left: 30px;
+    
+
+
+}
+.imagegallery2{
+    height: 400px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 200px;
+}
+#imghead{
+    font-family: "Acme", sans-serif;
+    font-weight: 400;
+    font-style: normal;  
+    margin-top: 70px;
+    margin-left: 250px;
+    font-size: 70px;
+    color: rgb(208, 98, 14);
+}
+
+#firsttime
+{
+    margin-top: 200px;
+    color:red;
+}
+/* .icecream.center-right {
+    top: 15%;
+    left: 300px;
+    transform: translateY(-50%);
+}
+.icecream.center-left {
+    top: 15%;
+    left: 300px;
+    transform: translateY(-50%);
+}
+
+.icecreamImage {
+    width: 200px;
+    height:200px;
+} */
